# mcgravity

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.docker.md  README.md  config.example.yaml  eslint.config.js  package.json  release-plz.toml
.cursor/rules/: ratatui.mdc  rust.mdc
.github/workflows/: ci.yaml  docker-push.yml  integration-tests.yml  release.yml
docs/: adding-executors.md  architecture.md  release.md
examples/: echo-server.ts
src/: bun-sse-transport.ts  cli.rs  file_search.rs  index.ts  lib.rs  main.rs  server-composer.ts  server.ts
src/app/: events.rs  input.rs  layout.rs  mod.rs  slash_commands.rs  state.rs
src/app/render/: chat.rs  finished.rs  initial_setup.rs  mod.rs  settings.rs
src/app/tests/: file_search.rs  flow.rs  helpers.rs  initial_setup.rs  input.rs  integration.rs  mod.rs  persistence.rs  settings.rs  ui.rs
src/core/: cli_check.rs  commands.rs  executor.rs  flow.rs  mod.rs  prompts.rs  retry.rs  runner.rs  task_utils.rs
src/fs/: mod.rs  settings.rs  todo.rs
src/tui/: mod.rs  setup.rs  theme.rs
src/tui/widgets/: command_popup.rs  file_popup.rs  mod.rs  output.rs  status_indicator.rs
src/utils/: config.ts  schema-converter.ts  schemas.ts
test/: README.md  run-integration-tests.ts
test/integration/: echo-server.test.ts  test-config.yaml
