[package]
name = "mcgravity"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/tigranbs/mcgravity"
description = "TUI interface for orchestrating AI-assisted coding tools"
license = "MIT"
homepage = "https://github.com/tigranbs/mcgravity"

[dependencies]
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
chrono = "0.4"
serde_json = "1"
unicode-width = "0.2"
nucleo-matcher = "0.3"
ignore = "0.4"
tui-textarea = { git = "https://github.com/0xferrous/tui-textarea.git", rev = "a5086767ee0831e319aec9432aaef495d8f280c4" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = ["github"]
installers = ["shell", "npm"]
publish-jobs = ["npm"]
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc"]
hosting = ["github"]
allow-dirty = ["ci"]
